# tetrio_visualizer

./: CMakeLists.txt  Parse.cpp  Parse.h  README.md  Utils.cpp  Utils.h  main.cpp  test.ttrm
SFML/: objects.h
imports/: json.hpp
render/: Render.cpp  Render.h
structures/: Aggregatestats.h  AvgTracking.h  Board.h  BoardV.h  Clears.h  ConstantsOverrides.h  Controlling.h  Data.h  Enemy.h  ExtraAvgTracking.h  Falling.h  Finesse.h  Game.h  Garbage.h  Handling.h  Hold.h  IgeData.h  IntData.h  Killer.h  Minoskin.h  Objective.h  Options.h  Player.h  Points.h  PointsExtra.h  Replay.h  Replays.h  Source.h  Stats.h  Target.h  Time.h  Ttr.h  tData.h  tEvent.h
